--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Werkzeug==2.3.7
 gunicorn==21.2.0
 python-dotenv==1.0.0
 Flask-Migrate==4.0.5
-Flask-Admin==1.6.1
+Flask-Admin>=1.6.1
 Flask-Principal==0.4.0
 Flask-RESTX==1.3.0
 Flask-Limiter==3.5.0
