--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,11 @@ sentry-sdk==1.39.1
 # htmx is a frontend library, not a Python package, so it will be included via CDN in templates 
 Flask-Security-Too==5.3.0
 psycopg2-binary>=2.9.0
+
+# Test/automation dependencies
+selenium
+webdriver-manager
+chromedriver-autoinstaller
+pytest-xvfb
+tenacity
+factory-boy
