--- a/.github/workflows/selenium.yml
+++ b/.github/workflows/selenium.yml
@@ -14,14 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build and run Selenium tests
-        run: |
-          docker build -t selenium-tests .
-          docker run --rm -v ${{ github.workspace }}/test_screenshots:/app/test_screenshots selenium-tests || true
+      - name: Build Docker image
+        run: docker build -t selenium-tests .
 
-      - name: Upload screenshots if tests fail
-        if: failure()
+      - name: Run tests and output results
+        run: |
+          mkdir -p test_results
+          docker run --rm -v ${{ github.workspace }}/test_results:/app/test_results selenium-tests
+
+      - name: Upload JUnit report
         uses: actions/upload-artifact@v4
         with:
-          name: test-screenshots
-          path: test_screenshots/
+          name: selenium-test-results
+          path: test_results/results.xml
