--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Backend CI
+name: ✨ Backend CI
 
 on:
   push:
@@ -12,14 +12,14 @@ env:
 
 jobs:
   backend-tests:
-    name: Backend Tests
+    name: ✨ Backend Tests
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ env.PYTHON_VERSION }}
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -41,28 +41,29 @@ jobs:
       - name: Run backend tests
         run: |
           mkdir -p test_results
-          pytest tests/ -v --tb=short \
-            --junitxml=test_results/backend-results.xml \
-            --html=test_results/backend-report.html \
+          pytest tests/ \
+            --junitxml=test_results/results.xml \
+            --html=test_results/report.html \
             --self-contained-html
 
-      - name: Upload backend test artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-test-results-${{ github.run_number }}
-          path: test_results/
-
-      - name: Display test results
+      - name: Display test results summary
         if: always()
         run: |
-          echo "## 🧪 Backend Test Results" >> $GITHUB_STEP_SUMMARY
-          ls -la test_results/ >> $GITHUB_STEP_SUMMARY || echo "No test_results directory found"
+          echo "## ✅ Test Summary" >> $GITHUB_STEP_SUMMARY
+          ls -lh test_results >> $GITHUB_STEP_SUMMARY
 
-      - name: Publish test results
+      - name: Publish Test Results
         uses: dorny/test-reporter@v1
         if: always()
         with:
           name: Backend Tests
-          path: test_results/backend-results.xml
+          path: test_results/results.xml
           reporter: java-junit
           fail-on-error: false
+
+      - name: Upload test artifacts
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: backend-test-results
+          path: test_results/
